<resources>
    <string name="app_name">WallPopsAdmin</string>
    <string name="add_thumbnail">Add Thumbnail</string>
    <string name="add">Add</string>
    <string name="sdcs">sdcs</string>
    <string name="add_wallpaper">Add Wallpaper</string>

    <string name="thumbnail_link">Thumbnail Link</string>
    <string name="wallpaper_title">Wallpaper Title</string>
    <string name="save">Save</string>
    <string name="thumbnail_title">Thumbnail Title</string>
    <string name="wallpaper_link">Wallpaper Link</string>
    <string name="next">Next</string>
    <string name="wallpops">WallPops</string>

    <string-array name="title">
        <item>Add New Wallpaper</item>
        <item>Show All Wallpaper</item>
    </string-array>

</resources>