<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddNewWall">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/main_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground"
            app:title="Add new wallpaper" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/ETtitleWallpaper"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:ems="10"
                android:hint="@string/wallpaper_title"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:inputType="textUri"
                android:layout_gravity="center_horizontal"
                android:paddingStart="10dp"
                android:background="@drawable/edit_text_ui"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageViewWallpaper"
                    android:layout_width="136dp"
                    android:layout_height="143dp"
                    android:src="@mipmap/ic_launcher"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
                    android:contentDescription="@string/sdcs" />

                <TextView
                    android:id="@+id/nameee"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_toRightOf="@id/imageViewWallpaper"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"

                    android:fontFamily="@font/nunito_sans_bold"
                    android:text="@string/add_wallpaper"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    />

                <Button
                    android:id="@+id/addWallpaperbtn"
                    android:layout_width="157dp"
                    android:layout_height="53dp"
                    android:text="@string/add"
                    android:textAllCaps="false"
                    android:layout_toRightOf="@id/imageViewWallpaper"
                    android:layout_marginLeft="10dp"
                    android:layout_below="@id/nameee"
                    android:layout_marginTop="20dp"
                    android:textSize="16sp"
                    android:background="@drawable/bttn_ui"
                    />

            </RelativeLayout>

            <TextView
                android:id="@+id/wallpaperLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wallpaper_link"
                android:textSize="16sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"/>
            <Button
                android:id="@+id/saveBtn"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:text="@string/next"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:textAllCaps="false"
                android:textSize="18sp"
                />


        </LinearLayout>

    </ScrollView>

</LinearLayout>
